express-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-deployment
  namespace: default
  labels:
    app: express-deployment
spec:
  selector:
    matchLabels:
      app: express-deployment
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: express-deployment
    spec:
      # initContainers:
      # Init containers are exactly like regular containers, except:
      # - Init containers always run to completion.
      # - Each init container must complete successfully before the next one starts.
      containers:
      - name: express-deployment
        image: mongo-express
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 200Mi
        ports:
        - containerPort: 8081
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: express-service
spec:
  selector:
    app: express-deployment
  # type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8081
    # nodePort: 30000
    targetPort: 8081
