mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongo-deployment
  ports:
  - name: mongo-deployment
    protocol: TCP
    port: 27017
    targetPort: 27017
